Fix spacing on survey

--- a/surveystylesheet.css
+++ b/surveystylesheet.css
@@ -27,8 +27,7 @@ h1 {
 } */
 
 #title2 {
-  padding-top:50px;
-
+  padding-top:60px;
 }
 
 
